# qparted

./: .gitignore  CMakeLists.txt  COPYING  ChangeLog  README  README.md  TODO  qparted.desktop  qparted.pam  qparted.pro  qtparted.lsm  qtparted.pro
data/: CMakeLists.txt  qtparted.desktop  qtparted.xpm
docs/: AUTHORS  BUGS  DEVELOPER-FAQ  INSTALL  README  TODO  VERSION  qtparted.1
patches/: kde-ac260.patch  kde-am.patch  qtparted-desktop.patch
src/: CMakeLists.txt  main.cpp  qp_actlist.cpp  qp_actlist.h  qp_combospin.cpp  qp_combospin.h  qp_common.cpp  qp_common.h  qp_debug.cpp  qp_debug.h  qp_devlist.cpp  qp_devlist.h  qp_diskview.cpp  qp_diskview.h  qp_dlgconfig.cpp  qp_dlgconfig.h  qp_dlgcreate.cpp  qp_dlgcreate.h  qp_dlgdevprop.cpp  qp_dlgdevprop.h  qp_dlgformat.cpp  qp_dlgformat.h  qp_dlgprogress.cpp  qp_dlgprogress.h  qp_dlgresize.cpp  qp_dlgresize.h  qp_drivelist.cpp  qp_drivelist.h  qp_extended.cpp  qp_extended.h  qp_exttools.cpp  qp_exttools.h  qp_filesystem.cpp  qp_filesystem.h  qp_fswrap.cpp  qp_fswrap.h  qp_libparted.cpp  qp_libparted.h  qp_listchart.cpp  qp_listchart.h  (+25 more)
src/xpm/: left_arrow.xpm  part_beos.xpm  part_dos.xpm  part_free.xpm  part_freebsd.xpm  part_linux.xpm  part_mac.xpm  part_os2.xpm  part_unknown.xpm  part_windows.xpm  right_arrow.xpm  tool_delete.xpm  tool_disk.xpm  tool_format.xpm  tool_move.xpm  tool_new.xpm  tool_property.xpm  tool_quit.xpm  tool_redo.xpm  tool_resize.xpm  tool_save.xpm  tool_undo.xpm  tool_whatthis.xpm
ts/: CMakeLists.txt  qparted_ca.ts  qparted_cs.ts  qparted_fi.ts  qparted_fr.ts  qparted_it.ts  qparted_ru.ts  qparted_ua.ts  qtparted_ca.ts  qtparted_de.ts  qtparted_es.ts  qtparted_pl.ts  qtparted_sv.ts
ui/: qp_ui_config.ui  qp_ui_create.ui  qp_ui_format.ui  qp_ui_progress.ui  qp_ui_resize.ui
