project(QtParted)
cmake_minimum_required(VERSION 2.8)
set(qt_min_version "4.5.0")
find_package(Qt4 REQUIRED)
include(${QT_USE_FILE})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
option(QWS_CLIENT "Run as client (rather than UI server) when using Qt/Embedded" ON)
if(QWS_CLIENT)
	add_definitions(-DQWS_CLIENT)
endif()
option(QT_RPATH "Link to Qt with RPATH (e.g. to make sure we're called with Qt/Embedded vs. Qt/X11)" OFF)
if(QT_RPATH)
	set(CMAKE_SKIP_RPATH FALSE)
	set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
endif()
add_definitions(-DDATADIR=\"${CMAKE_INSTALL_PREFIX}/share/qtparted\")
add_definitions(-DVERSION=\"0.6.0\")
add_subdirectory(data)
add_subdirectory(src)
add_subdirectory(ts)
